<resources>
    <string name="app_name">SBDelivery</string>
    <string name="login_hint_email">E-mail</string>
    <string name="login_enter">Войти</string>
    <string name="login_registration">Регистрация</string>
    <string name="login_forgot_password">Забыли пароль?</string>
    <string name="login_label_password">Пароль</string>
    <string name="name_label">Имя</string>
    <string name="surname_label">Фамилия</string>
    <string name="registration_button">Зарегистрироваться</string>
    <string name="button_enter">Вход</string>
    <string name="recovery_description">Введите электронную почту, которую вы использовали при регистрации, и мы вышлем на нее код для восстановления пароля</string>
    <string name="recovery_password_send">Отправить</string>
    <string name="recovery_code_label">Введите проверочный код</string>
    <string name="recovery_new_password">Введите новый пароль</string>
    <string name="button_save">Сохранить</string>
    <string name="login_label_new_password">Повторите пароль</string>
    <string name="button_ok">OK</string>
    <string name="button_yes">Да</string>
    <string name="button_no">Нет</string>
    <string name="menu_sort">Сортировка</string>
    <string name="menu_search">Поиск</string>

    <!--HomeFragment-->
    <string name="home_recommend_label">Рекомендуем</string>
    <string name="home_view_all">См. все</string>
    <string name="home_stock_title">Акция</string>
    <string name="home_best_label">Лучшее</string>
    <string name="home_popular_label">Популярное</string>

    <!--RegistrationFragment-->
    <string name="registration_label">Регистрация</string>
    <string name="registration_name_error">Только буквы</string>
    <string name="registration_email_error">Некорректный e-mail</string>
    <string name="registration_empty_error">Пустое поле</string>

    <!--LoginFragment-->
    <string name="login_name_label">Имя</string>
    <string name="login_name_hint">Введите имя</string>
    <string name="login_password_label">Пароль</string>
    <string name="login_password_hint">Введите пароль</string>
    <string name="login_enter_button">Войти</string>
    <string name="login_registration_button">Регистрация</string>
    <string name="login_restore_password_button">Забыли пароль?</string>

    <!--MenuFragment-->
    <string name="menu_home">Главная</string>
    <string name="menu_dishes">Меню</string>
    <string name="menu_favorite">Избранное</string>
    <string name="menu_basket">Корзина</string>
    <string name="menu_profile">Профиль</string>
    <string name="menu_orders">Заказы</string>
    <string name="menu_notifications">Уведомления</string>
    <string name="menu_about">О приложении</string>
    <string name="menu_dialog_description">Вы действительно хотите выйти из аккаунта</string>

    <!--CategoryFragment-->
    <string-array name="sort">
        <item>По алфавиту(по возр.)</item>
        <item>По алфавиту(по убыв.)</item>
        <item>По популярности(по возр.)</item>
        <item>По популярности(по убыв.)</item>
        <item>По по рейтингу(по возр.)</item>
        <item>По по рейтингу(по убыв.)</item>
    </string-array>

    <!--FavoritesFragment-->
    <string name="favorites_label">Избранное</string>

    <!--DishFragment-->
    <string name="dish_add_to_basket">Добавить в корзину</string>
    <string name="dish_reviews_title">Отзывы</string>
    <string name="dish_review_button">Добавить отзыв</string>
    <string name="dish_complete_add_review">Отзыв будет опубликован после проверки модератором</string>
    <string name="dish_label">Блюдо</string>
    <string name="dish_add">добавлено в корзину</string>
    <string name="dish_unit">шт</string>

    <!--ReviewDialogFragment-->
    <string name="review_dialog_title">Оставить отзыв</string>
    <string name="review_dialog_hint">Введите отзыв</string>
    <string name="review_dialog_send">Отправить</string>

    <!--BasketFragment-->
    <string name="basket_accept">Применить</string>
    <string name="basket_promo_hint">Введите промокод</string>
    <string name="basket_sum_label">Итого</string>
    <string name="basket_order_title">Оформить заказ</string>
    <string name="basket_label">Корзина</string>
    <string name="basket_empty">Корзина пуста. Добавьте блюда в корзину, чтобы увидеть их здесь</string>

    <!--RegistrationOrderFragment-->
    <string name="registration_order_address_label">Адрес:</string>
    <string name="registration_order_enter">Написать</string>
    <string name="registration_order_map">Указать на карте</string>
    <string name="registration_order_entrance_label">Подъезд:</string>
    <string name="registration_order_floor_label">Этаж:</string>
    <string name="registration_order_room_label">Квартира:</string>
    <string name="registration_order_intercom_label">Домофон:</string>
    <string name="registration_order_comment_label">Комментарий:</string>
    <string name="registration_order_register_order">Оформить заказ</string>
    <string name="registration_order_label">Оформление заказа</string>

    <!--SetAddressFragment-->
    <string name="set_address_label">Указание адреса</string>
</resources>
