<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/ic_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recovery_description"
        android:layout_marginStart="@dimen/maxi_margin_30dp"
        android:layout_marginEnd="@dimen/maxi_margin_30dp"
        android:layout_marginBottom="17dp"
        style="@style/Description"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_email_label"
        />

    <TextView
        android:id="@+id/tv_email_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_hint_email"
        android:layout_marginStart="@dimen/maxi_margin_30dp"
        android:layout_marginBottom="6dp"
        style="@style/LabelText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/ev_email"
        />

    <EditText
        android:id="@+id/ev_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/standart_padding"
        android:paddingBottom="@dimen/standart_padding"
        android:paddingStart="@dimen/standart_padding"
        android:layout_marginStart="@dimen/maxi_margin_30dp"
        android:layout_marginEnd="@dimen/maxi_margin_30dp"
        android:layout_marginBottom="7dp"
        android:background="@drawable/background_edit_text"
        style="@style/DarkText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/guideline"
        />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_enter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/maxi_margin_30dp"
        android:layout_marginEnd="@dimen/maxi_margin_30dp"
        android:layout_marginTop="26dp"
        android:background="@drawable/filled_button"
        android:stateListAnimator="@null"
        android:gravity="center"
        android:text="@string/recovery_password_send"
        style="@style/LightMediumTitle"
        app:layout_constraintTop_toBottomOf="@id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>