<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/ic_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/tv_recovery_label"
        style="@style/Description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/maxi_margin_30dp"
        android:layout_marginEnd="@dimen/maxi_margin_30dp"
        android:layout_marginBottom="16dp"
        android:text="@string/recovery_new_password"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_password_label"
        />

    <TextView
        android:id="@+id/tv_password_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_label_password"
        android:layout_marginStart="@dimen/maxi_margin_30dp"
        android:layout_marginBottom="@dimen/mini_margin_6dp"
        style="@style/LabelText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/et_password"
        />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/standart_padding"
        android:paddingBottom="@dimen/standart_padding"
        android:paddingStart="@dimen/standart_padding"
        android:paddingEnd="@dimen/standart_padding"
        android:layout_marginStart="@dimen/maxi_margin_30dp"
        android:layout_marginEnd="@dimen/maxi_margin_30dp"
        android:layout_marginBottom="@dimen/standart_margin_16dp"
        android:background="@drawable/background_edit_text"
        style="@style/DarkText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_repeat_password_label"
        />

    <TextView
        android:id="@+id/tv_repeat_password_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_label_new_password"
        android:layout_marginStart="@dimen/maxi_margin_30dp"
        android:layout_marginBottom="@dimen/mini_margin_6dp"
        style="@style/LabelText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/ev_repeat_password"
        />

    <EditText
        android:id="@+id/ev_repeat_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/standart_padding"
        android:paddingBottom="@dimen/standart_padding"
        android:paddingStart="@dimen/standart_padding"
        android:paddingEnd="@dimen/standart_padding"
        android:layout_marginStart="@dimen/maxi_margin_30dp"
        android:layout_marginEnd="@dimen/maxi_margin_30dp"
        android:layout_marginBottom="@dimen/mini_margin_6dp"
        android:background="@drawable/background_edit_text"
        style="@style/DarkText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline"
        app:layout_constraintBottom_toBottomOf="@id/guideline"
        />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_registration"
        style="@style/LightMediumTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/maxi_margin_30dp"
        android:layout_marginEnd="@dimen/maxi_margin_30dp"
        android:layout_marginTop="37dp"
        android:background="@drawable/filled_button"
        android:gravity="center"
        android:stateListAnimator="@null"
        android:text="@string/button_save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ev_repeat_password" />

</androidx.constraintlayout.widget.ConstraintLayout>